--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "llavejwt": "ca22f406-8e2c-442c-8363-2ddbd72f3ffb"
 }
