--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "llavejwt": "ca22f406-8e2c-442c-8363-2ddbd72f3ffb"
+  "llavejwt": "ca22f406-8e2c-442c-8363-2ddbd72f3ffb",
+  "origenesPermitidos": [
+    "http://127.0.0.1:5500"
+  ]
 }
