Cache con Redis

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=deligo21-pc;Database=WebAPIBibliotecaDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=deligo21-pc;Database=WebAPIBibliotecaDB;Integrated Security=True;TrustServerCertificate=True;",
+    "redis": "redis-14466.c56.east-us.azure.redns.redis-cloud.com:14466,password=yRiR59sDGgXBxW8xZe7RmR5tsDOpdWXL"
   },
   "Logging": {
     "LogLevel": {
